--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lanka Agri Life",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev":"nodemon server.js"
   },
   "author": "Savija Senelie Gayani Kaveesha and Rakith",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
