--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://rakith_rw:Rakith_8282@lankaagri-cluster.shgxfbi.mongodb.net/?retryWrites=true&w=majority&appName=Lankaagri-cluster
+#db urls
